// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceLockup renders with default props 1`] = `
.c4 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c3 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c2 {
  line-height: 1.5;
}

.c2 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c3 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="TDS_Box-modules__betweenBottomMargin-1___43ZDj TDS_Box-modules__stack___33m4D c0"
>
  <div
    class="TDS_Box-modules__betweenBottomMargin-1___43ZDj TDS_Box-modules__stack___33m4D"
  >
    <div
      class="TDS_Box-modules__betweenRightMargin-1___XT_b2 TDS_Box-modules__inline___jTHcz c1"
    >
      <div
        class="TDS_Box-modules__betweenRightMargin-1___XT_b2 TDS_Box-modules__inline___jTHcz"
      >
        <span
          class="c2"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c3"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c4"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is large renders 1`] = `
.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
  word-wrap: break-word;
  font-weight: 400;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c5 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c4 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 2.75rem;
  font-weight: 300;
}

.c3 {
  color: #2a2c2e;
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.3;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c4 {
    font-size: 4.5rem;
    -webkit-letter-spacing: 0.2px;
    -moz-letter-spacing: 0.2px;
    -ms-letter-spacing: 0.2px;
    letter-spacing: 0.2px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0"
>
  <div
    class=""
  >
    <span
      class="c1"
    >
      top text
    </span>
    <div
      class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c2"
    >
      <div
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz"
      >
        <span
          class="c3"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c4"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c5"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is medium renders 1`] = `
.c6 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c7 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c7 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c5 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c4 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.75rem;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
  font-weight: 400;
}

.c3 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c4 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="TDS_Box-modules__betweenBottomMargin-3___1jBrz TDS_Box-modules__stack___33m4D c0"
>
  <div
    class="TDS_Box-modules__betweenBottomMargin-1___43ZDj TDS_Box-modules__stack___33m4D"
  >
    <span
      class="c1"
    >
      top text
    </span>
    <div
      class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c2"
    >
      <div
        class="TDS_Box-modules__betweenRightMargin-1___XT_b2 TDS_Box-modules__inline___jTHcz"
      >
        <span
          class="c3"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c4"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c5"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c6"
  />
  <span
    class="c7"
  >
    bottom text
  </span>
</div>
`;

exports[`PriceLockup size prop is small renders 1`] = `
.c6 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c5 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c4 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c3 {
  line-height: 1.5;
}

.c3 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c4 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0"
>
  <div
    class="TDS_Box-modules__betweenBottomMargin-1___43ZDj TDS_Box-modules__stack___33m4D"
  >
    <span
      class="c1"
    >
      top text
    </span>
    <div
      class="TDS_Box-modules__betweenRightMargin-1___XT_b2 TDS_Box-modules__inline___jTHcz c2"
    >
      <div
        class="TDS_Box-modules__betweenRightMargin-1___XT_b2 TDS_Box-modules__inline___jTHcz"
      >
        <span
          class="c3"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c4"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c5"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c6"
  />
  <span
    class="c1"
  >
    bottom text
  </span>
</div>
`;
